--- a/kafka-consumer-one/src/main/resources/application.yml
+++ b/kafka-consumer-one/src/main/resources/application.yml
@@ -17,3 +17,7 @@ spring:
           #group: Group-1
           #设置自定义输入通道的消费的主题
           destination: topic-1
+        input:
+          #设置自定义输入通道的消费的主题,这里消费的是操作日志推送过来的消息
+          #(最开始不通,把这边的配置粘贴下,改了下就可以了,我真没看出什么差别,但是就是可以了,只要主题一致,使用内置的通道就实现了消息的消费)
+          destination: log-kafka-topic
