--- a/kafka-consumer-two/src/main/resources/application.yml
+++ b/kafka-consumer-two/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     stream:
       kafka:
         binder:
+          #可通过配置group的方式来配置消费服务启动之前为消费的消息,不配置则之前消息无法消费(丢失)
           brokers: localhost:9092
       bindings:
         #自定义输入通道名称
